adjusted package structure
